# Simple-UEFI-Bootloader-Test

./: CMakeLists.txt  README.md
src/boot/: startup.nsh
src/boot/EFI/: efi.h  efi_boot_services.h  efi_configuration.h  efi_device_path_protocol.h  efi_filesystem.h  efi_graphic_output_protocol.h  efi_load_file_protocol.h  efi_runtime_services.h  efi_system.h  efi_text_protocol.h  efi_types.h
src/boot/bootloader/: bootloader.c  bootloader.h
src/boot/bootloader/cpu/: cpu.h
src/boot/bootloader/elf/: elf.c  elf.h
src/boot/bootloader/modules/gop/: gop.c  gop.h
src/boot/bootloader/modules/protocols/: test_boot_protocol.h
src/boot/bootloader/paging/: paging.c  paging.h
src/boot/bootloader/terminal/: terminal.c  terminal.h
src/boot/bootloader/wrappers/: wrappers.c  wrappers.h
src/common/memory/: memory.c  memory.h
src/common/serial/: serial.c  serial.h
src/common/utilities/: utilities.c  utilities.h
src/kernel/core/: kernel.c
src/kernel/linker/: kernel.ld
